--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1,65 +1,1 @@
-header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-  }
-  
-  .logo {
-    display: block;
-    margin: 0 auto 2rem;
-  }
-  
-  nav {
-    width: 100%;
-    font-size: 12px;
-    text-align: center;
-    margin-top: 2rem;
-  }
-  
-  nav a.router-link-exact-active {
-    color: var(--color-text);
-  }
-  
-  nav a.router-link-exact-active:hover {
-    background-color: transparent;
-  }
-  
-  nav a {
-    display: inline-block;
-    padding: 0 1rem;
-    border-left: 1px solid var(--color-border);
-  }
-  
-  nav a:first-of-type {
-    border: 0;
-  }
-  
-  @media (min-width: 1024px) {
-    header {
-      display: flex;
-      place-items: center;
-      padding-right: calc(var(--section-gap) / 2);
-    }
-  
-    .logo {
-      margin: 0 2rem 0 0;
-    }
-  
-    header .wrapper {
-      display: flex;
-      place-items: flex-start;
-      flex-wrap: wrap;
-    }
-  
-    nav {
-      text-align: left;
-      position: relative;
-      top: 0;
-      margin-top: 30px;
-      font-size: 1rem;
-  
-      padding-top: 1rem;
-      padding-bottom: 1rem;
-    }
-  }
+@import "common.scss";
